--- a/TellingTime.ioc
+++ b/TellingTime.ioc
@@ -1,75 +1,109 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.IPParameters=SamplingTime
+ADC.SamplingTime=ADC_SAMPLETIME_160CYCLES_5
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+Dma.Request0=SPI2_TX
+Dma.RequestsNb=1
+Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.0.Instance=DMA1_Channel5
+Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.0.Mode=DMA_NORMAL
+Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+FATFS.IPParameters=_FS_LOCK,_FS_READONLY,_USE_MKFS,_USE_FASTSEEK,_FS_TINY,_FS_NORTC
+FATFS._FS_LOCK=0
+FATFS._FS_NORTC=1
+FATFS._FS_READONLY=1
+FATFS._FS_TINY=1
+FATFS._USE_FASTSEEK=0
+FATFS._USE_MKFS=0
 File.Version=6
 GPIO.groupedBy=Show All
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00300617
-I2S2.ErrorAudioFreq=-0.8 %
+I2C1.Timing=0x0060112F
+I2S2.ErrorAudioFreq=0.0 %
 I2S2.IPParameters=Instance,VirtualMode,RealAudioFreq,ErrorAudioFreq
 I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=7.936 KHz
+I2S2.RealAudioFreq=8.0 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32L052C8T6
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=I2C1
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
-Mcu.IP2=I2S2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM21
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP1=DMA
+Mcu.IP10=TIM2
+Mcu.IP11=TIM21
+Mcu.IP12=TIM22
+Mcu.IP13=USART1
+Mcu.IP14=USB
+Mcu.IP2=FATFS
+Mcu.IP3=I2C1
+Mcu.IP4=I2S2
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=15
 Mcu.Name=STM32L052C(6-8)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PA0
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
-Mcu.Pin2=PA1
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PB6
-Mcu.Pin26=PB7
-Mcu.Pin27=VP_ADC_TempSens_Input
-Mcu.Pin28=VP_RCC_USB
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
-Mcu.Pin3=PA2
-Mcu.Pin30=VP_RTC_VS_RTC_Calendar
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM21_VS_NoETR
-Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=34
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB2
+Mcu.Pin16=PB10
+Mcu.Pin17=PB11
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PA15
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PB3
+Mcu.Pin31=PB4
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_FATFS_VS_Generic
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM2_VS_NoETR
+Mcu.Pin42=VP_TIM21_VS_NoETR
+Mcu.Pin43=VP_TIM22_VS_NoETR
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L052C8Tx
-MxCube.Version=6.12.1
-MxDb.Version=DB.6.0.121
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
+NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -80,14 +114,20 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=VIB_CTRL
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0.GPIO_Label=TIME_BTN
+PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA0.GPIO_PuPd=GPIO_PULLUP
 PA0.Locked=true
-PA0.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=SPO2_INT
+PA0.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA1.GPIO_Label=SEL_BTN
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPXTI1
 PA10.Mode=Asynchronous
@@ -100,75 +140,117 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=SD_MODE
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=FLASH_WP
+PA2.GPIO_Label=FLASH_RST
 PA2.Locked=true
 PA2.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=TIME_BTN
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA3.GPIO_Label=DOWN_BTN
+PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPXTI3
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=HR_BTN
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA4.GPIO_Label=PO_BTN
+PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=FLASH_SCK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=FLASH_MISO
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=FLASH_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA8.GPIO_Label=VOL_DOWN_BTN
+PA8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
-PA8.Mode=Clock-out
-PA8.Signal=RCC_MCO
+PA8.Signal=GPXTI8
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=FLASH_CS
+PB0.GPIO_Label=VBATT_READ
 PB0.Locked=true
-PB0.Signal=GPIO_Output
+PB0.Mode=IN8
+PB0.Signal=ADC_IN8
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=FLASH_RST
+PB1.GPIO_Label=VBATT_CTRL
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=UP_BTN
+PB10.GPIO_Label=FLASH_WP
 PB10.Locked=true
-PB10.Signal=GPXTI10
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=DOWN_BTN
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB11.GPIO_Label=HR_BTN
+PB11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB11.GPIO_PuPd=GPIO_PULLUP
 PB11.Locked=true
 PB11.Signal=GPXTI11
 PB12.Mode=Half_Duplex_Master
 PB12.Signal=I2S2_WS
 PB13.Mode=Half_Duplex_Master
 PB13.Signal=I2S2_CK
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=SD_MODE
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB14.GPIO_Label=VOL_UP_BTN
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
-PB14.Signal=GPIO_Output
+PB14.Signal=GPXTI14
 PB15.Mode=Half_Duplex_Master
 PB15.Signal=I2S2_SD
-PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=SPO2_BTN
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB2.GPIO_Label=MCP_STAT
+PB2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPXTI2
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=SPO2_SCL
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=GAIN_12DB
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=GAIN_15DB
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=GAIN_9DB
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SPO2_SDA
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=GAIN_3DB
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB9.GPIO_Label=SPO2_INT
+PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPXTI9
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC13.GPIO_Label=UP_BTN
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC13.GPIO_PuPd=GPIO_PULLUP
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PC14-OSC32_IN.Mode=LSE-External-Clock-Source
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC15-OSC32_OUT.GPIO_Label=DATE_BTN
+PC15-OSC32_OUT.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPXTI15
 PCC.Checker=true
 PCC.Line=STM32L0x2
 PCC.MCU=STM32L052C(6-8)Tx
@@ -207,9 +289,18 @@ PCC.Seq0.Step1.Voltage_Source=Battery
 PCC.Series=STM32L0
 PCC.Temperature=25
 PCC.Vdd=3.0
+PH0-OSC_IN.GPIOParameters=GPIO_Label
+PH0-OSC_IN.GPIO_Label=VIB_MOTOR
+PH0-OSC_IN.Locked=true
+PH0-OSC_IN.Signal=GPIO_Output
+PH1-OSC_OUT.GPIOParameters=GPIO_Label
+PH1-OSC_OUT.GPIO_Label=FLASH_CS
+PH1-OSC_OUT.Locked=true
+PH1-OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -222,7 +313,7 @@ ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -238,43 +329,44 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S2_Init-I2S2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC_Init-ADC-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2S2_Init-I2S2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC_Init-ADC-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-false,12-MX_TIM22_Init-TIM22-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_TIM21_Init-TIM21-false-HAL-true
 RCC.48CLKFreq_Value=48000000
 RCC.48RNGFreq_Value=48000000
 RCC.48USBFreq_Value=48000000
 RCC.ADCFreq_Value=16000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48MClockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48MClockSelection,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=16000000
-RCC.LPUARTFreq_Value=16000000
+RCC.I2C1Freq_Value=32000000
+RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48MClockSelection,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIMFreq_Value=32000000
+RCC.LPUARTFreq_Value=32000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=16000000
+RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=48000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLDIV=RCC_PLLDIV_3
 RCC.PLLMUL=RCC_PLLMUL_6
 RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
-RCC.TIMFreq_Value=16000000
-RCC.TimerFreq_Value=16000000
-RCC.USART1Freq_Value=16000000
-RCC.USART2Freq_Value=16000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIMFreq_Value=32000000
+RCC.TimerFreq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.WatchDogFreq_Value=37000
@@ -282,39 +374,48 @@ RTC.HourFormat=RTC_HOURFORMAT_24
 RTC.IPParameters=HourFormat,WeekDay,Year
 RTC.WeekDay=RTC_WEEKDAY_WEDNESDAY
 RTC.Year=25
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SH.GPXTI10.0=GPIO_EXTI10
-SH.GPXTI10.ConfNb=1
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=4.0 MBits/s
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.IPParameters=TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2,Period
+TIM2.Period=32768
+TIM2.TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2=TIM2_ETR_LSE
 TIM21.IPParameters=TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21,Period
-TIM21.Period=6554
+TIM21.Period=3277
 TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
+TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,TIM_MasterOutputTrigger
+TIM22.Period=328
+TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
+TIM22.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=MSC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,USBD_DEBUG_LEVEL
-USB_DEVICE.MANUFACTURER_STRING=STMicroelectronics
-USB_DEVICE.USBD_DEBUG_LEVEL=0
-USB_DEVICE.VirtualMode=Msc
-USB_DEVICE.VirtualModeFS=Msc_FS
-VP_ADC_TempSens_Input.Mode=IN-TempSens
-VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
-VP_RCC_USB.Mode=CRS SYNC Source USB
-VP_RCC_USB.Signal=RCC_USB
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
@@ -323,7 +424,9 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM21_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM21
 VP_TIM21_VS_NoETR.Signal=TIM21_VS_NoETR
-VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
-VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
+VP_TIM22_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM22
+VP_TIM22_VS_NoETR.Signal=TIM22_VS_NoETR
+VP_TIM2_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM2
+VP_TIM2_VS_NoETR.Signal=TIM2_VS_NoETR
 board=custom
 isbadioc=false
