--- a/TellingTime.ioc
+++ b/TellingTime.ioc
@@ -1,5 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-ADC.IPParameters=SamplingTime
+ADC.ContinuousConvMode=ENABLE
+ADC.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC.EnableAnalogWatchDog=false
+ADC.IPParameters=SamplingTime,EnableAnalogWatchDog,EOCSelection,OversamplingMode,ContinuousConvMode
+ADC.OversamplingMode=DISABLE
 ADC.SamplingTime=ADC_SAMPLETIME_160CYCLES_5
 CAD.formats=[]
 CAD.pinconfig=Dual
@@ -15,12 +19,14 @@ Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FATFS.IPParameters=_FS_LOCK,_FS_READONLY,_USE_MKFS,_USE_FASTSEEK,_FS_TINY,_FS_NORTC
+FATFS.IPParameters=_FS_LOCK,_FS_READONLY,_USE_MKFS,_USE_FASTSEEK,_FS_TINY,_FS_NORTC,_USE_LFN,_MAX_LFN
 FATFS._FS_LOCK=0
 FATFS._FS_NORTC=1
 FATFS._FS_READONLY=1
 FATFS._FS_TINY=1
+FATFS._MAX_LFN=255
 FATFS._USE_FASTSEEK=0
+FATFS._USE_LFN=0
 FATFS._USE_MKFS=0
 File.Version=6
 GPIO.groupedBy=Show All
@@ -88,21 +94,23 @@ Mcu.Pin37=VP_FATFS_VS_Generic
 Mcu.Pin38=VP_RTC_VS_RTC_Activate
 Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_TIM2_VS_NoETR
-Mcu.Pin42=VP_TIM21_VS_NoETR
-Mcu.Pin43=VP_TIM22_VS_NoETR
+Mcu.Pin40=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM2_VS_NoETR
+Mcu.Pin43=VP_TIM21_VS_NoETR
+Mcu.Pin44=VP_TIM22_VS_NoETR
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=44
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L052C8Tx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
+NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -111,6 +119,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -370,8 +379,14 @@ RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.WatchDogFreq_Value=37000
+RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.AlarmMaskDateWeekDay-Alarm\ A=RTC_ALARMMASK_DATEWEEKDAY
+RTC.AlarmMaskHours-Alarm\ A=RTC_ALARMMASK_HOURS
+RTC.Format=RTC_FORMAT_BIN
 RTC.HourFormat=RTC_HOURFORMAT_24
-RTC.IPParameters=HourFormat,WeekDay,Year
+RTC.Hours_A-Alarm\ A=0
+RTC.IPParameters=HourFormat,WeekDay,Year,Alarm-Alarm A,Hours_A-Alarm A,Minutes_A-Alarm A,AlarmMaskDateWeekDay-Alarm A,AlarmMaskHours-Alarm A,Format
+RTC.Minutes_A-Alarm\ A=2
 RTC.WeekDay=RTC_WEEKDAY_WEDNESDAY
 RTC.Year=25
 SH.GPXTI0.0=GPIO_EXTI0
@@ -418,6 +433,8 @@ VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
